--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://hugo-toha.github.io
+baseURL: https://hipump.github.io
 
 languageCode: en-us
 title: "John's Blog"
@@ -6,16 +6,16 @@ title: "John's Blog"
 # Use Hugo modules to add theme
 module:
   imports:
-  - path: github.com/hugo-toha/toha/v4
+    - path: github.com/hugo-toha/toha/v4
   mounts:
-  - source: static/files
-    target: static/files
-  - source: ./node_modules/flag-icon-css/flags
-    target: static/flags
-  - source: ./node_modules/@fontsource/mulish/files
-    target: static/files
-  - source: ./node_modules/katex/dist/fonts
-    target: static/fonts
+    - source: static/files
+      target: static/files
+    - source: ./node_modules/flag-icon-css/flags
+      target: static/flags
+    - source: ./node_modules/@fontsource/mulish/files
+      target: static/files
+    - source: ./node_modules/katex/dist/fonts
+      target: static/fonts
 
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
@@ -64,7 +64,7 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/hipump/hipump.github.io
   # Default branch of your Git repo
   gitBranch: main
 
@@ -110,23 +110,23 @@ params:
       services:
         disqus:
           shortName: toha-example-site
-        # valine:
-        #   appId: HTV6askWxVo3vOxlqjjaq2hd-MsYXbMMI
-        #   appKey: pVrT3C85KGIuk27t07eh6bUC
-        #   avatar: retro
-        #   placeholder: Share your thought.
-        #   lang: en
-        #   recordIP: true
-        #   enableQQ: true
-        # utteranc:
-        #   repo: github.com/hugo-toha/hugo-toha.github.io
-        #   issueTerm: title
-        #   theme: github-light
-        # giscus:
-        #   repo: your-repo/name
-        #   repoID: your-repo-id
-        #   category: your-category
-        #   categoryID: your-category-id
+          # valine:
+          #   appId: HTV6askWxVo3vOxlqjjaq2hd-MsYXbMMI
+          #   appKey: pVrT3C85KGIuk27t07eh6bUC
+          #   avatar: retro
+          #   placeholder: Share your thought.
+          #   lang: en
+          #   recordIP: true
+          #   enableQQ: true
+          # utteranc:
+          #   repo: github.com/hugo-toha/hugo-toha.github.io
+          #   issueTerm: title
+          #   theme: github-light
+          # giscus:
+          #   repo: your-repo/name
+          #   repoID: your-repo-id
+          #   category: your-category
+          #   categoryID: your-category-id
           # theme: light
           # map: url
           # reaction: 1
@@ -140,7 +140,7 @@ params:
 
     # Enable Analytics
     analytics:
-      enabled: true
+      enabled: false
       services:
         # Google Analytics
         google:
@@ -248,16 +248,16 @@ params:
         # Can play HTML5 Video, Audio, Youtube, Vimeo.
         # For more info on setup: https://github.com/sampotts/plyr#quick-setup
         plyr:
-          # options doc: https://github.com/sampotts/plyr#options
-          # fullscreen: true
-    
+        # options doc: https://github.com/sampotts/plyr#options
+        # fullscreen: true
+
         # Enable reading time support in post cards and in post pages
     readingTime:
       enable: false
-    
+
     # Number of posts to show to each page. Default is "12"
     pagination:
-       maxPostsPerPage: 12
+      maxPostsPerPage: 12
 
 
   # Provide footer configuration.
