--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -39,6 +39,6 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3.9.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: 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
         publish_branch: gh-pages
         publish_dir: ./public
