--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -35,12 +35,10 @@ jobs:
     - name: Build
       run: hugo --minify
 
+    # push the generated content into the `gh-pages` branch.
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      # If you're changing the branch from main,
-      # also change the `main` in `refs/heads/main`
-      # below accordingly.
-      if: github.ref == 'refs/heads/main'
+      uses: peaceiris/actions-gh-pages@v3.9.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
         publish_dir: ./public
