--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,21 +1,20 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "웹서비스QA"
+nickname: "테스트1"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
-image: "images/author/john.png"
+greeting: "웹서비스QA 블로그에 오신 것을 환영합니다."
+image: "images/author/QALogo.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  email: "hipump@afreecatv.com"
+  phone: "82+ 1087803912"
+  github: hipump
+  
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - 품질을 높이자!
+  - UI/UX 검토를 충분히 하자!
+  - 안정성을 극대화하기 위해 항상 노력하고 고민하자!
+  - 피할 수 없다면 즐겨라!
+  - 생산적인 업무를 수행하자!
