--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,9 +1,9 @@
 # some information about you
 name: "웹서비스QA"
-nickname: "테스트1"
+nickname: "환영합니다."
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "웹서비스QA 블로그에 오신 것을 환영합니다."
-image: "images/author/QALogo.jpg"
+greeting: "웹서비스QA 블로그에 오신 것을 "
+image: "images/author/Logo.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
   email: "hipump@afreecatv.com"
