Tools 페이지 수정 및 아이콘 추가

--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -23,15 +23,15 @@ experiences:
 #    # end: Dec 2020
 #    # give some points about what was your responsibilities at the company.
     업무영역:
-    - 라이브서비스기획팀 : 아이템, 라이브 방송에 대한 전체 영역
-    - 방송서비비스기획팀 : 프릭샷, 외부장치 등 방송 송출에 대한 전체 영역
-    - 플랫폼UX기획팀 : 방송국, 검색, MY 등의 영역과 플랫폼 전체영역에 대한 UI/UX 영역
+    - 라이브서비스기획팀 - 아이템, 라이브 방송에 대한 전체 영역
+    - 방송서비비스기획팀 - 프릭샷, 외부장치 등 방송 송출에 대한 전체 영역
+    - 플랫폼UX기획팀 - 방송국, 검색, MY 등의 영역과 플랫폼 전체영역에 대한 UI/UX 영역
 
   - designation: 유관부서 (VOD사업본부 / TL부문)
     업무영역:
-    - VOD사업팀 : VOD 플레이어 및 Catch, 다시보기 등 VOD 전체 영역
-    - 플랫폼AD팀 : 광고 상품 관련 인벤토리 및 기획/설계
-    - 미디어랩 : 코어, P2P, 백엔드 등 시청 및 품질에 관한 전체 영역
+    - VOD사업팀 - VOD 플레이어 및 Catch, 다시보기 등 VOD 전체 영역
+    - 플랫폼AD팀 - 광고 상품 관련 인벤토리 및 기획/설계
+    - 미디어랩 - 코어, P2P, 백엔드 등 시청 및 품질에 관한 전체 영역
 
 - company:
     name: 요구분석
