--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -56,48 +56,48 @@ experiences:
     responsibilities:
       - 디자인 배포 후 디자인을 바탕으로 UI 개발 진행
 
-- company:
-    name: 서비스 개발
-    location: 서비스개발실
-    logo: /images/sections/experiences/Development.png
-    overview: 기획서를 바탕으로 기능 구현/개발
-  positions:
-    - designation: BE플랫폼팀
-      responsibilities:
-        - 백엔드 개발 진행
-
-    - designation: FE플랫폼팀
-      responsibilities:
-        - 프론트 개발 진행
-
-    - designation: 플랫폼아키텍처팀
-      responsibilities:
-        - 멤버십, 결제 / Pay, 알림 등과 관련된 개발 진행
-
-    - designation: 방송서비스플랫폼팀
-      responsibilities:
-      - 프릭샷, ANETA, 스트리머 등 방송과 관련된 개발 진행
-
-    - designation: 광고검색플랫폼팀
-      responsibilities:
-        - 검색, 광고서비스 관련 개발 진행
-
-- company:
-    name: QA
-    location: 웹서비스QA팀, QA팀
-    logo: /images/sections/experiences/QA.png
-    overview: 기획서를 바탕으로 TestCase 작성 및 기능 테스트 진행
-  positions:
-    - designation: 웹서비스QA팀
-      responsibilities:
-        - 서버, 프론트, 백엔드 등 모바일앱을 제외한 모든 영역에 대한 QA 진행 (PC, 모바일웹)
-
-    - designation: QA팀
-      responsibilities:
-        - 모바일앱 내 네이티브 영역에 대해서만 QA 진행
-
-- company:
-    name: 서비스 배포
-    location: 서비스개발실
-    logo: /images/sections/experiences/Launch.png
-    overview: QA 완료된 제품에 대한 서비스 배포 진행
+#- company:
+#    name: 서비스 개발
+#    location: 서비스개발실
+#    logo: /images/sections/experiences/Development.png
+#    overview: 기획서를 바탕으로 기능 구현/개발
+#  positions:
+#    - designation: BE플랫폼팀
+#      responsibilities:
+#        - 백엔드 개발 진행
+#
+#    - designation: FE플랫폼팀
+#      responsibilities:
+#        - 프론트 개발 진행
+#
+#    - designation: 플랫폼아키텍처팀
+#      responsibilities:
+#        - 멤버십, 결제 / Pay, 알림 등과 관련된 개발 진행
+#
+#    - designation: 방송서비스플랫폼팀
+#      responsibilities:
+#      - 프릭샷, ANETA, 스트리머 등 방송과 관련된 개발 진행
+#
+#    - designation: 광고검색플랫폼팀
+#      responsibilities:
+#        - 검색, 광고서비스 관련 개발 진행
+#
+#- company:
+#    name: QA
+#    location: 웹서비스QA팀, QA팀
+#    logo: /images/sections/experiences/QA.png
+#    overview: 기획서를 바탕으로 TestCase 작성 및 기능 테스트 진행
+#  positions:
+#    - designation: 웹서비스QA팀
+#      responsibilities:
+#        - 서버, 프론트, 백엔드 등 모바일앱을 제외한 모든 영역에 대한 QA 진행 (PC, 모바일웹)
+#
+#    - designation: QA팀
+#      responsibilities:
+#        - 모바일앱 내 네이티브 영역에 대해서만 QA 진행
+#
+#- company:
+#    name: 서비스 배포
+#    location: 서비스개발실
+#    logo: /images/sections/experiences/Launch.png
+#    overview: QA 완료된 제품에 대한 서비스 배포 진행
