프로세스 안내문 추가

--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -13,18 +13,18 @@ experiences:
 - company:
     name: 서비스 기획
     location: 라이브서비스기획팀, 방송서비스기획팀, 플랫폼UX기획팀, VOD사업팀 등등
-    logo: /images/sections/experiences/PlanA.jpg
+    logo: /images/sections/experiences/PlanB.png
     # company overview
     overview: 각 부서 기획자가 서비스 업데이트 기획서 작성
   positions:
   - designation: 서비스부문
-    진행업무:
+    responsibilities:
     - 라이브서비스기획팀 - 아이템, 라이브 방송에 대한 전체 영역
     - 방송서비비스기획팀 - 프릭샷, 외부장치 등 방송 송출에 대한 전체 영역
     - 플랫폼UX기획팀 - 방송국, 검색, MY 등의 영역과 플랫폼 전체영역에 대한 UI/UX 영역
 
   - designation: 유관부서 (VOD사업본부 / TL부문)
-    진행업무:
+    responsibilities:
     - VOD사업팀 - VOD 플레이어 및 Catch, 다시보기 등 VOD 전체 영역
     - 플랫폼AD팀 - 광고 상품 관련 인벤토리 및 기획/설계
     - 미디어랩 - 코어, P2P, 백엔드 등 시청 및 품질에 관한 전체 영역
@@ -36,7 +36,7 @@ experiences:
     overview: 프로젝트 각 담당자들이 모여 제반사항, 리뷰 등 진행
   positions:
   - designation: 기획 리뷰
-    진행업무:
+    responsibilities:
     - 기획 의도 및 기능 구현 논의
     - UI/UX 설계 검토
     - QA 단계에서의 우려사항 검토
@@ -49,11 +49,11 @@ experiences:
     overview: 기획서를 바탕으로 디자인 시안 제작 및 배포, UI 개발
   positions:
   - designation: UX디자인팀
-    진행업무:
+    responsibilities:
     - UX 를 고려하여 기획서를 바탕한 디자인 시안 작성
 
   - designation: 웹인터랙션팀
-    진행업무:
+    responsibilities:
       - 디자인 배포 후 디자인을 바탕으로 UI 개발 진행
 
 #- company:
